# minapp

./: README.md  aclocal.m4  config.status  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
data/: Makefile.am  org.Minapp.gresource.xml
data/resources/: toolbar-menu.ui  window.ui
resources/: minapp.gresource.xml  toolbar-menu.ui
src/: Makefile.am  main.c  minapp  minapp.c  minapp.h  minappwin.c  minappwin.h
